--- a/bin/view/TelaPrincipal.fxml
+++ b/bin/view/TelaPrincipal.fxml
@@ -5,6 +5,8 @@
 
 <AnchorPane id="anchor" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="739.0" stylesheets="@paginaInicial.css" xmlns="http://javafx.com/javafx/21.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.TelaPrincipalController">
    <children>
-      <Label layoutX="356.0" layoutY="62.0" styleClass="title" text="Label" />
+      <Label layoutX="184.0" layoutY="32.0" prefHeight="40.0" prefWidth="371.0" styleClass="title" text="ORGANIZADOR DE " />
+      <Label layoutX="256.0" layoutY="73.0" prefHeight="58.0" prefWidth="227.0" styleClass="title" text="BIBLIOTECA" wrapText="true" />
+      <Label layoutX="282.0" layoutY="112.0" prefHeight="58.0" prefWidth="176.0" styleClass="title" text="PESSOAL" wrapText="true" />
    </children>
 </AnchorPane>
