--- a/bin/view/TelaPrincipal.fxml
+++ b/bin/view/TelaPrincipal.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 
@@ -8,5 +9,7 @@
       <Label layoutX="184.0" layoutY="32.0" prefHeight="40.0" prefWidth="371.0" styleClass="title" text="ORGANIZADOR DE " />
       <Label layoutX="256.0" layoutY="73.0" prefHeight="58.0" prefWidth="227.0" styleClass="title" text="BIBLIOTECA" wrapText="true" />
       <Label layoutX="282.0" layoutY="112.0" prefHeight="58.0" prefWidth="176.0" styleClass="title" text="PESSOAL" wrapText="true" />
+      <Button layoutX="310.0" layoutY="192.0" mnemonicParsing="false" onAction="#detailsBtn" prefHeight="58.0" prefWidth="120.0" styleClass="mainBtn" text="Mostrar livros" textAlignment="JUSTIFY" wrapText="true" />
+      <Button layoutX="310.0" layoutY="270.0" mnemonicParsing="false" prefHeight="58.0" prefWidth="120.0" styleClass="mainBtn" text="Adicionar livros" textAlignment="CENTER" wrapText="true" />
    </children>
 </AnchorPane>
